Сделана динамика todo элемента

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,29 @@ code {
 .mt2 {
   margin-top: 2rem;
 }
+
+.todo {
+  margin-bottom: 1rem;
+}
+
+.todo.completed span{
+  text-decoration: line-through;
+}
+
+.todo label {
+  width: 100%;
+
+  padding: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  cursor: pointer;
+
+  background: #f3f3f3;
+}
+
+.todo i {
+  z-index: 2;
+}
